plugins {
	id 'java'
}

repositories {
	mavenLocal()
	maven {
		url = 'https://repo.runelite.net'
		content {
			includeGroupByRegex("net\\.runelite.*")
		}
	}
	mavenCentral()
}

def runeLiteVersion = 'latest.release'
def pluginMainClass = 'com.goalplanner.GoalPlannerPluginTest'

dependencies {
	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion

	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'

	// JUnit 5 (Jupiter) is the primary test framework. JUnit Vintage runs any
	// remaining JUnit 4 tests during the migration. Mockito for mocking
	// stateless deps (Client, ItemManager, etc); hand-rolled fakes for stateful
	// stores (GoalStore, ConfigManager).
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
	testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.2'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
	testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.10.2'
	testImplementation 'junit:junit:4.13.2'
	testImplementation 'org.mockito:mockito-core:5.11.0'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'

	testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion

	// Dev-only: hub-plugin jars dropped into dev-plugins/ (gitignored) join the
	// `run` client, so cross-plugin integrations (Quest Helper etc.) can be
	// tested locally. The dev main loads known plugin classes reflectively.
	testRuntimeOnly fileTree(dir: 'dev-plugins', include: '*.jar')
}

tasks.named('test', Test) {
	useJUnitPlatform()
}

group = 'com.goalplanner'
version = '0.5.0'

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.release.set(11)
}

tasks.register('run', JavaExec) {
	classpath = sourceSets.test.runtimeClasspath
	mainClass = pluginMainClass

	jvmArgs "-ea",
		"--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED",
		"--add-opens=java.base/java.net=ALL-UNNAMED",
		"--add-opens=java.base/java.io=ALL-UNNAMED"
	args "--developer-mode", "--debug"
}

tasks.register('shadowJar', Jar) {
	dependsOn configurations.testRuntimeClasspath
	manifest {
		attributes('Main-Class': pluginMainClass, 'Multi-Release': true)
	}

	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	from sourceSets.main.output
	from sourceSets.test.output
	from {
		configurations.testRuntimeClasspath.collect { file ->
			file.isDirectory() ? file : zipTree(file)
		}
	}

	exclude 'META-INF/INDEX.LIST'
	exclude 'META-INF/*.SF'
	exclude 'META-INF/*.DSA'
	exclude 'META-INF/*.RSA'
	exclude '**/module-info.class'

	group = BasePlugin.BUILD_GROUP
	archiveClassifier.set('shadow')
	archiveFileName.set("${rootProject.name}-${project.version}-all.jar")
}

// Documentation-gap audit: cross-checks docs/features.json against
// FEATURES.md, docs/img/, and the source tree. Structural drift fails the
// task; unrecorded media / missing tests print as a tracked gap report.
tasks.register('checkDocs', Exec) {
	group = 'verification'
	description = 'Audit the feature registry against the README guide, media, and source tree.'
	commandLine 'python3', 'scripts/check_docs.py'
}

// Plugin Hub source-size gate: the review bot caps main source at 200k tokens
// (whole codebase, comments stripped, tests excluded). Run before submitting.
tasks.register('checkTokens', Exec) {
	group = 'verification'
	description = 'Estimate the Plugin Hub review token count and flag if near/over the 200k cap.'
	commandLine 'python3', 'scripts/check_tokens.py'
}

// Tofu-glyph guard: macOS Tahoe's Swing font fallback renders symbol glyphs
// (bullets, arrows, triangles, midline ellipsis) as empty boxes. Keep UI/chat
// strings ASCII; draw real symbols as ShapeIcons.
tasks.register('checkGlyphs', Exec) {
	group = 'verification'
	description = 'Flag tofu-prone glyphs in Swing/chat string literals (macOS Tahoe).'
	commandLine 'python3', 'scripts/check_glyphs.py'
}

// ADR structure guard: decisions live as MADR files in docs/decisions/ (ADR-0001).
// Holds the invariants that keep the log skimmable — known status values,
// resolvable "superseded by" pointers, and an index that hasn't drifted.
tasks.register('checkAdr', Exec) {
	group = 'verification'
	description = 'Validate architecture decision records and the DECISIONS.md index.'
	commandLine 'python3', 'scripts/check_adr.py'
}

// One pre-submission gate: docs in sync AND source under the hub cap. Run this
// before re-pinning the plugin-hub PR.
tasks.register('preSubmit') {
	group = 'verification'
	description = 'Pre-submission checks for a Plugin Hub update (test + checkDocs + checkTokens + checkGlyphs + checkAdr).'
	dependsOn 'test', 'checkDocs', 'checkTokens', 'checkGlyphs', 'checkAdr'
}
